--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- fragment_event_detail.xml
+    Purpose: Detail fragment layout for EventDetailFragment
+
+    Drew Matheson, 2015.11.17: Created
+-->
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,25 +16,25 @@
     tools:context="ca.drewm.leaguetracker.PlayerStatsDetailFragment"
     android:clickable="true"> <!-- Prevent any fragments behind this from being clicked -->
 
-<TextView
-    android:id="@+id/event_detail"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textStyle="bold"
-    android:textSize="16sp"
-    android:ems="16"
-    android:textColor="@color/primary_text_default_material_dark"
-    android:layout_alignParentLeft="true"
-    android:layout_marginLeft="28dp"
-    android:maxLines="2" />
+    <TextView
+        android:id="@+id/event_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:ems="16"
+        android:textColor="@color/primary_text_default_material_dark"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="28dp"
+        android:maxLines="2" />
 
-<ImageButton
-    android:id="@+id/editPlayerNameButton"
-    android:layout_width="24dp"
-    android:layout_height="0dp"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-    android:paddingRight="6dp"
-    android:paddingLeft="6dp" />
+    <ImageButton
+        android:id="@+id/editPlayerNameButton"
+        android:layout_width="24dp"
+        android:layout_height="0dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:paddingRight="6dp"
+        android:paddingLeft="6dp" />
 
 </RelativeLayout>
