--- a/app/src/main/res/layout/character_onepane.xml
+++ b/app/src/main/res/layout/character_onepane.xml
@@ -1,11 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- character_onepane.xml
+    Purpose: One-pane layout for CharacterActivity
+
+    Drew Matheson, 2015.11.17: Created
+-->
+
 <fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/character_list"
-    android:name="ca.drewm.secondlifestory.CharacterListFragment"
+    android:name="ca.secondlifestory.CharacterListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    tools:context=".CharacterListActivity"
+    tools:context=".CharacterActivity"
     tools:layout="@android:layout/list_content" />
