--- a/app/src/main/res/layout/character_twopane.xml
+++ b/app/src/main/res/layout/character_twopane.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- character_twopane.xml
+    Purpose: Two-pane layout for CharacterActivity
+
+    Drew Matheson, 2015.11.17: Created
+-->
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,23 +17,24 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context="ca.drewm.secondlifestory.EventActivity">
+    tools:context=".CharacterListActivity">
 
     <!--
-    This layout is a two-pane layout for the Events
+    This layout is a two-pane layout for the Characters
     master/detail flow.
     -->
 
     <fragment
-        android:id="@+id/event_list"
-        android:name="ca.drewm.secondlifestory.EventListFragment"
+        android:id="@+id/character_list"
+        android:name="ca.secondlifestory.CharacterListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         tools:layout="@android:layout/list_content" />
 
-    <FrameLayout
-        android:id="@+id/event_detail_container"
+    <fragment
+        android:id="@+id/character_detail"
+        android:name="ca.secondlifestory.CharacterDetailFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3" />
