--- a/app/src/main/res/layout/event_twopane.xml
+++ b/app/src/main/res/layout/event_twopane.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- event_twopane.xml
+    Purpose: Two-pane layout for EventActivity
+
+    Drew Matheson, 2015.11.17: Created
+-->
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,24 +17,27 @@
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
     android:showDividers="middle"
-    tools:context=".CharacterListActivity">
+    tools:context="ca.secondlifestory.EventActivity">
 
     <!--
-    This layout is a two-pane layout for the Characters
+    This layout is a two-pane layout for the Events
     master/detail flow.
     -->
 
-    <fragment android:id="@+id/character_list"
-        android:name="ca.drewm.secondlifestory.CharacterListFragment"
+    <fragment
+        android:id="@+id/event_list"
+        android:name="ca.secondlifestory.EventListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         tools:layout="@android:layout/list_content" />
 
-    <FrameLayout
-        android:id="@+id/character_detail_container"
+    <fragment
+        android:id="@+id/event_detail"
+        android:name="ca.secondlifestory.EventDetailFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        android:layout_weight="3"
+        tools:layout="@android:layout/list_content" />
 
 </LinearLayout>
