--- a/app/src/main/res/layout/event_onepane.xml
+++ b/app/src/main/res/layout/event_onepane.xml
@@ -10,7 +10,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/event_list"
-    android:name="ca.secondlifestory.EventListFragment"
+    android:name="ca.secondlifestory.activities.event.EventListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
