--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="ca.secondlifestory.LoginActivity">
+    tools:context="ca.secondlifestory.activities.LoginActivity">
 
     <ImageView
         android:id="@+id/login_logo"
