--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,7 +15,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="ca.secondlifestory.SettingsActivity">
+    tools:context="ca.secondlifestory.activities.SettingsActivity">
 
     <TextView
         android:text="@string/title_activity_settings"
