--- a/app/src/main/res/layout/character_onepane.xml
+++ b/app/src/main/res/layout/character_onepane.xml
@@ -10,7 +10,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/character_list"
-    android:name="ca.secondlifestory.CharacterListFragment"
+    android:name="ca.secondlifestory.activities.character.CharacterListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
