--- a/app/src/main/res/layout/activity_customize.xml
+++ b/app/src/main/res/layout/activity_customize.xml
@@ -4,22 +4,79 @@
     Purpose: Layout for CustomizeActivity
 
     Drew Matheson, 2015.11.17: Created
+    Isaac West, 2015.11.24: Initial Layout
 -->
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="ca.secondlifestory.activities.CustomizeActivity">
+    style="@style/pageLayout"
+    tools:context="ca.secondlifestory.activities.CustomizeActivity"
+    android:orientation="vertical" >
 
     <TextView
-        android:text="@string/title_activity_customize"
-        android:layout_width="wrap_content"
+        style="@style/detailTextViewLabel"
+        android:text="@string/race_name" />
+    <EditText
+        android:id="@+id/new_race_name"
+        android:inputType="text"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/new_race_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/save_new_race" />
 
-</RelativeLayout>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/standard_padding" />
+
+    <TextView
+        style="@style/detailTextViewLabel"
+        android:text="@string/class_name" />
+    <EditText
+        android:id="@+id/new_class_name"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/new_class_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/save_new_class" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/standard_padding" />
+
+    <TextView
+        style="@style/detailTextViewLabel"
+        android:text="@string/delete_race" />
+    <Spinner
+        android:id="@+id/race_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/delete_race_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/delete_race" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/standard_padding" />
+
+    <TextView
+        style="@style/detailTextViewLabel"
+        android:text="@string/delete_class" />
+    <Spinner
+        android:id="@+id/class_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/delete_class_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/delete_class" />
+</LinearLayout>
