--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,22 +4,57 @@
     Purpose: Layout for SettingsActivity
 
     Drew Matheson, 2015.11.17: Created
+    Isaac West, 2015.11.24: Initial Layout
 -->
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    style="@style/pageLayout"
     tools:context="ca.secondlifestory.activities.SettingsActivity">
 
-    <TextView
-        android:text="@string/title_activity_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true" >
+        <TextView
+            android:text="@string/title_activity_settings"
+            style="@style/pageHeader" />
 
+        <Button
+            android:id="@+id/tutorials"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/standard_padding"
+            android:text="@string/tutorials"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:padding="@dimen/standard_padding"
+            android:background="#ffffff"/>
+
+        <Button
+            android:id="@+id/delete_all_characters_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/standard_padding"
+            android:text="@string/delete_all_characters"/>
+        <Button
+            android:id="@+id/delete_all_data_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/standard_padding"
+            android:text="@string/delete_all_data"/>
+    </LinearLayout>
+
+    <TextView
+        android:text="@string/copyright"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="@dimen/detail_text"
+        android:textColor="@color/primary_text_default_material_dark"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
