Character List and Detail work.
Added a loading indicator too.

--- a/app/src/main/res/layout/fragment_character_list.xml
+++ b/app/src/main/res/layout/fragment_character_list.xml
@@ -12,6 +12,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Create Character" />
+
     <ListView
         android:id="@android:id/list"
         style="@style/listViewStyle" />
