--- a/app/src/main/res/layout/fragment_character_detail.xml
+++ b/app/src/main/res/layout/fragment_character_detail.xml
@@ -16,9 +16,17 @@
     tools:context="ca.drewm.leaguetracker.PlayerStatsDetailFragment"
     android:clickable="true"> <!-- Prevent any fragments behind this from being clicked -->
 
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/loadingIndicator"
+        android:progressDrawable="@drawable/loading_spinning_indicator"
+        android:layout_centerInParent="true" />
+
     <TextView
         android:id="@+id/character_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/header_text"
         android:textColor="@color/primary_text_default_material_dark"
@@ -51,6 +59,7 @@
                 style="@style/detailTextViewLabel"
                 android:text="@string/status" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -82,6 +91,7 @@
         android:layout_below="@id/character_description_label" />
 
     <LinearLayout
+        android:id="@+id/button_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -101,4 +111,5 @@
             android:layout_weight="1"
             android:padding="@dimen/standard_padding" />
     </LinearLayout>
+
 </RelativeLayout>
