--- a/app/src/main/res/layout/activity_customize.xml
+++ b/app/src/main/res/layout/activity_customize.xml
@@ -15,18 +15,31 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/character_name"
+        style="@style/pageHeader"
+        android:text="@string/custom_races_and_classes" />
+
+    <TextView
         style="@style/detailTextViewLabel"
         android:text="@string/race_name" />
-    <EditText
-        android:id="@+id/new_race_name"
-        android:inputType="text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/new_race_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save_new_race" />
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/new_race_name"
+            android:inputType="text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:singleLine="true" />
+        <Button
+            android:id="@+id/new_race_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/save_new_race" />
+    </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
@@ -35,16 +48,24 @@
     <TextView
         style="@style/detailTextViewLabel"
         android:text="@string/class_name" />
-    <EditText
-        android:id="@+id/new_class_name"
-        android:inputType="text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/new_class_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save_new_class" />
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/new_class_name"
+            android:inputType="text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:singleLine="true" />
+        <Button
+            android:id="@+id/new_class_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/save_new_class"
+            android:layout_weight="1" />
+    </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
@@ -53,15 +74,23 @@
     <TextView
         style="@style/detailTextViewLabel"
         android:text="@string/delete_race" />
-    <Spinner
-        android:id="@+id/race_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/delete_race_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/delete_race" />
+        android:orientation="horizontal">
+        <Spinner
+            android:id="@+id/race_spinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+        <Button
+            android:id="@+id/delete_race_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/delete_race" />
+    </LinearLayout>
+
 
     <Space
         android:layout_width="match_parent"
@@ -70,13 +99,20 @@
     <TextView
         style="@style/detailTextViewLabel"
         android:text="@string/delete_class" />
-    <Spinner
-        android:id="@+id/class_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/delete_class_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/delete_class" />
+        android:orientation="horizontal">
+        <Spinner
+            android:id="@+id/class_spinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+        <Button
+            android:id="@+id/delete_class_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/delete_class" />
+    </LinearLayout>
 </LinearLayout>
