--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,10 +8,7 @@
     <style name="pageLayout">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
-        <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
-        <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
         <item name="android:background">@color/background_material_dark</item>
     </style>
 
@@ -28,7 +25,7 @@
     <!-- base style for list views -->
     <style name="listViewStyleBase">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:choiceMode">singleChoice</item>
         <item name="android:background">@color/background_material_dark</item>
     </style>
