Work on Player Character List
Made it so you can't go back to the login activity. This will need to change if we allow actually logging in.
Made it so the back button on CharacterActivity now pops the fragment backstack if there is one instead of closing the app.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,7 +10,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/pageLayout"
+    style="@style/activityLayout"
     tools:context="ca.secondlifestory.activities.SettingsActivity">
 
     <LinearLayout
