--- a/app/src/main/res/layout/character_twopane.xml
+++ b/app/src/main/res/layout/character_twopane.xml
@@ -9,10 +9,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    style="@style/activityLayout"
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
@@ -30,13 +27,14 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        tools:layout="@android:layout/list_content" />
+        tools:layout="@layout/fragment_character_list" />
 
     <fragment
         android:id="@+id/character_detail"
         android:name="ca.secondlifestory.activities.character.CharacterDetailFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        android:layout_weight="3"
+        tools:layout="@layout/fragment_character_detail" />
 
 </LinearLayout>
