--- a/app/src/main/res/layout/character_list_item.xml
+++ b/app/src/main/res/layout/character_list_item.xml
@@ -1,16 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+    style="@style/activityLayout"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:gravity="center_vertical"
+    android:layout_height="match_parent"
     android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
+    android:paddingStart="?android:attr/listPreferredItemPaddingLeft"
     android:paddingRight="?android:attr/listPreferredItemPaddingRight"
-    android:background="?android:attr/activatedBackgroundIndicator"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:textColor="@color/primary_text_default_material_dark"
-    android:ellipsize="end"
-    android:lines="2"/>
+    android:paddingEnd="?android:attr/listPreferredItemPaddingRight"
+    android:descendantFocusability="blocksDescendants">
+
+    <!-- View Event List button -->
+    <ImageButton
+        android:id="@+id/view_events_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:src="@drawable/ic_list_white_24dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:contentDescription="@string/editImageDescription" />
+
+    <!-- Character name -->
+    <TextView
+        android:id="@+id/character_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceListItem"
+        android:gravity="center_vertical"
+        android:background="?android:attr/activatedBackgroundIndicator"
+        android:textColor="@color/primary_text_default_material_dark"
+        android:ellipsize="end"
+        android:lines="1"
+        android:layout_toLeftOf="@id/view_events_button"
+        android:layout_toStartOf="@id/view_events_button"
+        android:layout_alignTop="@id/view_events_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="Placeholder Name" />
+
+    <!-- Character class and race -->
+    <TextView
+        android:id="@+id/race_class"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceListItemSmall"
+        android:textColor="@color/secondary_text_default_material_dark"
+        android:layout_alignLeft="@id/character_name"
+        android:layout_alignStart="@id/character_name"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:layout_below="@id/character_name"
+        android:text="Ford Vehicle" />
+</RelativeLayout>
+
+
