--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -32,7 +32,8 @@
 
     <ListView
         android:id="@android:id/list"
-        style="@style/listViewStyle" />
+        style="@style/listViewStyle"
+        />
 
     <TextView
         style="@style/emptyListViewItem"
