Setup part of the flow for creating and editing a character.
Added a generic spinner adapter for ParseQueryAdapter as the default implementation doesn't work for spinners if you are targetting API > 19.
Changed PlayerCharacter to have references to CharacterClass and Race rather than just keeping their name. It seemed pretty close to impossible to set up a Spinner with the race/class if it didn't exist in the user's lists of races and classes.

Moved the create button for character from in the list fragment into the layouts for the character activity as it isn't related to the list's functionality.

Created a very basic/initial layout for fragment_character_upsert layout.

Added style for fragment layouts.
Added text styles to the theme.

--- a/app/src/main/res/layout/character_twopane.xml
+++ b/app/src/main/res/layout/character_twopane.xml
@@ -21,13 +21,28 @@
     master/detail flow.
     -->
 
-    <fragment
-        android:id="@+id/character_list"
-        android:name="ca.secondlifestory.activities.character.CharacterListFragment"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        tools:layout="@layout/fragment_character_list" />
+        android:orientation="vertical">
+        <ImageButton
+            android:id="@+id/create_character_button"
+            android:layout_width="fill_parent"
+            android:layout_height="36dp"
+            android:layout_gravity="right"
+            android:background="@drawable/button_background_roundedcorner"
+            android:src="@drawable/ic_add_circle_outline_white_36dp_states"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            />
+
+        <fragment
+            android:id="@+id/character_list"
+            android:name="ca.secondlifestory.activities.character.CharacterListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout="@layout/fragment_character_list" />
+    </LinearLayout>
 
     <fragment
         android:id="@+id/character_detail"
@@ -36,5 +51,4 @@
         android:layout_height="match_parent"
         android:layout_weight="3"
         tools:layout="@layout/fragment_character_detail" />
-
 </LinearLayout>
