--- a/app/src/main/res/layout/character_list_item.xml
+++ b/app/src/main/res/layout/character_list_item.xml
@@ -36,7 +36,7 @@
         android:src="@drawable/ic_list_white_24dp_states"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:contentDescription="@string/editImageDescription"
+        android:contentDescription="@string/edit"
         android:onClick="viewEventsButtonClicked"
         android:background="@drawable/button_background_roundedcorner"
         android:padding="4dp"
