--- a/app/src/main/res/layout/character_onepane.xml
+++ b/app/src/main/res/layout/character_onepane.xml
@@ -14,6 +14,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <ImageButton
+        android:id="@+id/create_character_button"
+        android:layout_width="fill_parent"
+        android:layout_height="36dp"
+        android:layout_gravity="right"
+        android:background="@drawable/button_background_roundedcorner"
+        android:src="@drawable/ic_add_circle_outline_white_36dp_states"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        />
+
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
