--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,17 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- CustomizeActivity your theme here. -->
+        <item name="android:textColor">@color/primary_text_default_material_dark</item>
+        <item name="android:textColorPrimary">@color/primary_text_default_material_dark</item>
+        <item name="android:textColorPrimaryInverse">@color/primary_dark_material_light</item>
+        <item name="android:textColorPrimaryDisableOnly">@color/primary_text_disabled_material_dark</item>
+        <item name="android:textColorPrimaryInverseDisableOnly">@color/primary_text_disabled_material_light</item>
+        <item name="android:textColorHighlight">@color/highlighted_text_material_dark</item>
+        <item name="android:textColorHighlightInverse">@color/highlighted_text_material_light</item>
+        <item name="android:textColorHint">@color/hint_foreground_material_dark</item>
+        <item name="android:textColorHintInverse">@color/hint_foreground_material_light</item>
+        <item name="android:textColorSecondary">@color/secondary_text_default_material_dark</item>
+        <item name="android:textColorSecondaryInverse">@color/secondary_text_default_material_light</item>
     </style>
 
     <style name="activityLayout">
@@ -14,6 +24,8 @@
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
         <item name="android:background">@color/background_material_dark</item>
     </style>
+
+    <style name="fragmentLayout" parent="activityLayout"></style>
 
     <!-- style for empty list view items -->
     <style name="emptyListViewItem">
